# tfm-rag-clinico

./: .gitignore  LICENSE  README.md  generate_charts.py  pyproject.toml  run_phase1.py  run_phase2.py  run_statistics.py
configs/: experiment_template.yaml
data/qa_dataset/: qa_pairs.json
data/results/: phase1_C1_fixed.json  phase1_C2_recursive.json  phase1_C3_semantic.json  phase1_summary.json  phase2_E1_MiniLM.json  phase2_E2_BGE.json  phase2_E3_PubMedBERT.json  phase2_E4_BioLORD.json  phase2_summary.json  wilcoxon_results.json
src/rag_clinico/: __init__.py  loader.py  pipeline.py
src/rag_clinico/chunking/: __init__.py  fixed.py  recursive.py  semantic.py
src/rag_clinico/embedding/: __init__.py  models.py
src/rag_clinico/evaluation/: __init__.py  metrics.py
src/rag_clinico/generation/: __init__.py  llm.py
src/rag_clinico/retrieval/: __init__.py  vector_store.py
